# An extremely simple pyproject.toml
# Many more options here: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# How to build your package. "[S]trongly recommended" to include this,
# per the docs. We use hatchling, default on Python docs.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Information on the package
[project]
name = "codecamp"
description = "Simulation of the vibration of a wind turbine blade and tower"
version = "0.0.1"
authors = [
    { name = "Arianna", email = "s23121@dtu.dk" },
    { name = "Giovanni", email = "s240109@dtu.dk" },
    { name = "Beatrice", email = "s232961@dtu.dk" }
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy"
]

[project.urls]
Repository = "https://github.com/DTUWindEducation/codecamp-a4-highway.git"
